force-app/main/default/objects/TruelinkData__c/TruelinkData__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Truelink Data</label>
</CustomObject>