force-app/main/default/objects/TruelinkData__c/fields/Production_Apikey__c.field-meta.xml
<CustomField>
    <fullName>Production_Apikey__c</fullName>
    <label>Production Apikey</label>
    <length>255</length>
    <type>Text</type>
</CustomField>