force-app/main/default/objects/TruelinkData__c/fields/Sandbox_Apikey__c.field-meta.xml
<CustomField>
    <fullName>Sandbox_Apikey__c</fullName>
    <label>Sandbox Apikey</label>
    <length>255</length>
    <type>Text</type>
</CustomField>