force-app/main/default/objects/TruelinkData__c/fields/Sandbox_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Sandbox_Endpoint__c</fullName>
    <label>Sandbox Endpoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>